# ferry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .trivyignore  Dockerfile  conversation-log-2026-02-22.md  pyproject.toml
.github/workflows/: self-deploy.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v2.1-REQUIREMENTS.md
.planning/phases/01-foundation-and-shared-contract/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-app-core-logic/: 02-02-PLAN.md  02-03-PLAN.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-build-and-lambda-deploy/: 03-01-PLAN.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-extended-resource-types/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
action/: Dockerfile  pyproject.toml
action/deploy/: action.yml
action/deploy-apigw/: action.yml
action/deploy-stepfunctions/: action.yml
action/setup/: action.yml
action/src/ferry_action/: __init__.py  build.py  deploy.py  deploy_apigw.py  deploy_stepfunctions.py  envsubst.py  gha.py  parse_payload.py  report.py
backend/: pyproject.toml
backend/src/ferry_backend/: __init__.py  logging.py  settings.py
backend/src/ferry_backend/auth/: jwt.py  tokens.py
backend/src/ferry_backend/checks/: plan.py  runs.py
backend/src/ferry_backend/config/: loader.py  schema.py
backend/src/ferry_backend/detect/: changes.py
backend/src/ferry_backend/dispatch/: trigger.py
backend/src/ferry_backend/github/: client.py
backend/src/ferry_backend/webhook/: dedup.py  handler.py  signature.py
docs/: api-gateways.md  lambdas.md  setup-runbook.md  setup.md  step-functions.md
iac/test-env/: README.md  api_gateway.tf  data.tf  main.tf  outputs.tf  providers.tf  step_function.tf  variables.tf
prd/: ferry-prd-mvp.md  ferry-prd-v1-devex.md  ferry-prd-v2-governance.md  ferry-prd-v3-migration.md
research/: competitor-analysis.md  developer-pain-points.md  market-analysis.md
scripts/: bootstrap.sh  local_invoke.py  migrate-iac-layout.sh  tf-import-all.sh
test-app/: README.md  ferry.yaml
tests/: conftest.py  test_settings.py
tests/test_action/: test_build.py  test_deploy.py  test_deploy_apigw.py  test_deploy_stepfunctions.py  test_envsubst.py  test_gha.py  test_parse_payload.py  test_report.py
tests/test_backend/: test_changes.py  test_check_runs.py  test_config_loader.py  test_config_schema.py  test_dedup.py  test_dispatch_trigger.py  test_handler.py  test_handler_comment.py  test_handler_phase2.py  test_handler_pr.py  test_handler_push_env.py  test_handler_workflow.py  test_jwt.py  test_plan.py  test_signature.py  test_tokens.py
tests/test_utils/: test_dispatch_models.py  test_webhook_models.py
utils/: pyproject.toml
(+241 files in other folders)
