[project]
name = "ferry-action"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ferry-utils",
]

[tool.uv.sources]
ferry-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ferry_action"]
