[project]
name = "ferry-action"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "boto3",
    "ferry-utils",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[tool.uv.sources]
ferry-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ferry_action"]
