[project]
name = "ferry-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ferry-utils",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0.1",
    "PyJWT[crypto]>=2.8",
    "boto3>=1.34",
    "structlog>=24.1",
]

[tool.uv.sources]
ferry-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ferry_backend"]
